manifests/ingress-alertmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
  name: alertmanager-main
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.dixneuf19.me
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: web
        path: /
  tls:
  - hosts:
    - alertmanager.dixneuf19.me
