manifests/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.dixneuf19.me
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
        path: /
  tls:
  - hosts:
    - grafana.dixneuf19.me
