manifests/ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
  name: prometheus-k8s
  namespace: monitoring
spec:
  rules:
  - host: prometheus.dixneuf19.me
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /
  tls:
  - hosts:
    - prometheus.dixneuf19.me
